use stretch height to fix mobile header bug

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,9 @@
 
 .App-header {
   background-color: #282c34;
+  height: stretch;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
